--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@ DB_HOST= localhost
 DB_PORT=5432
 DB_NAME=TaskManager
 DB_USER=postgres
-DB_PASSWORD=123456
+DB_PASSWORD=student
 DB_DIALECT= postgres
 DB_POOL_MAX= 5
 DB_POOL_MIN= 0
