--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "mysql2": "^3.9.2",
     "pg": "^8.11.3",
     "react": "^18.2.0",
+    "react-router-dom": "^6.23.0",
     "sequelize": "^6.37.1"
   }
 }
